# component-slot-extractor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  component.manifest.json
.github/workflows/: ci.yml  dev-publish.yml
assets/i18n/: en.json
ci/: component_pack_smoke.sh  local_check.sh  sync_dist_wasm.sh
schemas/: component.schema.json
schemas/io/: input.schema.json  output.schema.json
src/: extract.rs  i18n_bundle.rs  lib.rs  qa.rs
tests/: smoke.rs
