[package]
name = "component-slot-extractor"
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic WASM component: regex-based slot extraction from user utterances"
repository = "https://github.com/greenticai/component-slot-extractor"
build = "build.rs"
authors = ["Greentic"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
thiserror = "2"
once_cell = "1.19"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[dependencies.greentic-types]
version = "1.1"

[dependencies.greentic-interfaces-guest]
version = "1.1"
default-features = false
features = ["component-v0-6"]

[dev-dependencies]
serde_json = "1"

[build-dependencies]
serde_json = "1"
greentic-types = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { version = "0.54", default-features = false, features = ["macros", "realloc"] }
